# hl_mai_lab_05

./: .gitignore  CMakeLists.txt  data_upload.sh  index.yaml  start.sh  task.md
config/: config.cpp  config.h
database/: cache.cpp  conference.cpp  conference.h  database.cpp  database.h  lecture.cpp  lecture.h  user.cpp  user.h
docker/: docker-compose.yml
docker/database_init/init_shard_0/: init.sql
docker/database_init/init_shard_1/: init.sql
docker/mariadb/: Dockerfile
docker/proxysql/: proxysql.cnf
docker/services/conference/: Dockerfile
docker/services/lecture/: Dockerfile
docker/services/user/: Dockerfile
docker/writer/: Dockerfile
load_data/: load_data.cpp  test_data_for_user_table.json
services/conference/: http_conference_request_factory.cpp  http_conference_web_server.cpp  main.cpp
services/conference/handlers/: conference_handler.cpp
services/lecture/: http_lecture_request_factory.cpp  http_lecture_web_server.cpp  main.cpp
services/lecture/handlers/: lecture_handler.cpp
services/user/: http_user_request_factory.cpp  http_user_web_server.cpp  main.cpp
services/user/handlers/: user_handler.cpp
writer/: main.cpp
